# Voxel

./: .gitignore  Cargo.toml  README.md  compile_shaders.py
shaders/: voxel.frag  voxel.vert
shaders/spv/: shader.vert.spv  voxel.frag.spv  voxel.vert.spv
shaders/src/: shader.frag  shader.vert  voxel.frag  voxel.vert
src/: branch.rs  colors.rs  dispatcher.rs  main.rs  render.rs  shader.rs  tree.rs  vao.rs  volume.rs  window.rs
src/components/: tree.rs
src/math/: matrices.rs
src/misc/: light.rs
src/systems/: camera.rs  mod.rs  render.rs  tree.rs
src/vulkan/: buffer.rs  buffer_layout.rs  command_pool.rs  constants.rs  descriptor_pool.rs  descriptor_set_layout.rs  dynamic_texture.rs  framebuffers.rs  image_views.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  pipeline.rs  platform.rs  queue_indices.rs  queues.rs  render_pass.rs  sampler.rs  surface.rs  swap_chain.rs  swap_chain_support.rs  sync_objects.rs  texture.rs  uniform_buffers.rs  uniform_layout.rs  util.rs  window.rs
src/window/: button_resource.rs  keyboard.rs  mod.rs  mouse.rs
