[package]
name = "voxel"
version = "0.1.0"
authors = ["Unknown <unknown@example.com>"]
edition = "2018"

[dependencies]
nalgebra = "^0.25"
noise = "^0.7"
rand = "^0.8"
winit = "^0.24"
ash = "^0.32"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
